css/styles.css
/* ... */
@media screen and (min-width: 1600px) {
  .hero-content-grid h1.big  {
    font-size: 2.5em;
/*    color: red;*/
  }
  .hero-content-grid h2.big {
    font-size: 2em;
  }
}
@media screen and (min-width: 768px) {
  .grid-container {
    grid-template-columns: 30px 2fr 1fr 30px;
  }
}
@media screen and (min-width: 1600px) {
  .grid-container {
    grid-template-columns: 30px fit-content(800px) 1fr 30px;
  }
}

.small-font h1 {
  font-size: 1.5rem;
}
.small-font h2 {
  font-size: 1.25rem;
}
.big-font {
  font-size: 1.5rem;
}

.image-size {
  max-width: 360px;
  max-height: 360px;
}

/* slick slider */
#slick-slider,
#slick-slider-2,
#slick-slider-3,
#slick-slider-4,
#slick-slider-5 {
    opacity: 0;
    visibility: hidden;
    transition: opacity 1s ease;
    -webkit-transition: opacity 1s ease;
}
#slick-slider.slick-initialized,
#slick-slider-2.slick-initialized,
#slick-slider-3.slick-initialized,
#slick-slider-4.slick-initialized,
#slick-slider-5.slick-initialized  {
    visibility: visible;
    opacity: 1;    
}
.slick-prev, .slick-next {
    font-size: 0;
    line-height: 0;
    position: absolute;
    top: 50%;
    display: block;
    width: 20px;
    height: 20px;
    padding: 0;
    -webkit-transform: translate(0, -50%);
    -ms-transform: translate(0, -50%);
    transform: translate(0, -50%);
    cursor: pointer;
    color: transparent;
    border: none;
    outline: none;
    background: transparent;
    z-index: 9999;
}
.slick-prev:before, .slick-next:before {
    font-family: 'slick';
    font-size: 20px;
    line-height: 1;
    opacity: .75;
    color: #343434;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    display: absolute;
    z-index: 9999;
}
.slick-prev {
  left: -10px;
}
.slick-next {
  right: -10px;
}
.slider-pic {
  padding: 20px;
}
.slider-padding .testimonial {
  padding-left: 20px;
  padding-right: 20px;
}
.slider-padding .text-box {
  padding: 0 20px;
}
.slider figure img { 
  width: 20%; 
  float: left; 
}
.slider .testimonial {
  width: 20%;
  float: left;
}
.slider .testimonial img { 
  width: auto;
  max-width: 100%; 
  height: auto;
}
.max100 {
  max-width: 100%;
}
/* Tabs styles */
#tabs {
  position: relative;
}
.tabs-list {
  position: relative;
  display: flex;
  list-style: none;
  margin-bottom: 80px;
  z-index: 9999;
}
.tabs-list li {
  margin: 0 10px;
}
.stick {
  position: fixed;
  top: 80px;
  left: 50%;
  transform: translate(-50%,0);
  width: 100%;
  max-width: 1200px;
  padding: 0 40px;
}
.tabs-list.stick li a button {
  box-shadow: 1px 1px 8px rgba(0,0,0,.5);
}
.stick-pad {
  padding-bottom: 134px;
}
.stick-pad2 {
  padding-bottom: 118px;
}
/* map styles for HIBALL map */
.map-col {
  width: 100%;
  margin: 0 auto 20px;
}
.map-stats {
  width: 100%;
  margin: 0 auto 20px;
}
.tg  {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
  height: 550px;
  background: #fff;
}
.tg td{
  border-color: #aaa;
  border-style: solid;
  border-width: 1px;
  font-size: .9em;
  overflow: hidden;
  padding: 5px 5px;
  word-break: normal;
}
.tg .tg-lqy6{
  text-align: right;
  vertical-align: top;
}
.tg .tg-0lax{
  text-align: left;
  vertical-align: top;
}
.overview {
  border-collapse: collapse;
  border-spacing: 0;
  width: 100%;
}
.overview td {
  border: none;
  font-size: 1em;
  overflow: hidden;
  padding: 5px 5px;
  word-break: normal;
  text-align: center;
}
.map img,
.ws-height {
  height: auto;
}
@media screen and (min-width: 640px) {
  .map-col {
    width: 75%;
    float: left;
  }
  .map-stats {
    width: 25%;
    float: left;
  }
  .tg td {
    border-left: 0px;
  }
  .map img,
  .ws-height {
    height: 351px;
  }
}
@media screen and (min-width: 800px) {
  .overview td {
    font-size: 1.25em;
  }
  .map img,
  .ws-height {
    height: 400px;
  }
}
.map iframe {
  pointer-events: none;
}
.map iframe.clicked{
  pointer-events: auto;
}
.fitVids-wrapper {
  position: relative;
  padding-bottom: 56.25%;
  height: 0;
}
.fitVids-wrapper iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
@media screen and (min-width: 800px) {
  .fitVids-wrapper iframe {
    padding: 0 5px 5px;
  }
}
.hiball-gallery a {
  width: 50%;
  padding: 5px;
}
@media screen and (min-width: 640px) {
  .hiball-gallery a {
    width: 33.33%;
  }
}
@media screen and (min-width: 800px) {
  .hiball-gallery a {
    width: 16.66%;
  }
}
.hiballlaunch-card {
  width: 100%;
  padding: 15px;
  background-color: #fff;
  overflow: auto;
  margin-bottom: 15px;
}
.hiballlaunch-description {
  padding: 15px 0 0 0;
}
.hiballlaunch-button {
  float: right;
  margin-left: 15px;
}
@media screen and (min-width: 640px) {
  .hiballlaunch-description {
    padding: 0 0 0 15px;
  }
}
.small-button {
  font-size: .8em;
  padding: 1px 8px;
  background: #2C8EB3;
  color: #fff;
  font-weight: bold;
  -webkit-transition: 0.25s;
  transition: 0.25s;
  text-decoration: none;
}
.small-button:hover {
  background: #DC2627;
  color: #fff;
}
.hiballlaunch-description.col-3 p {
    line-height: 1.3em;
}
.hiball-title-link {
  font-size: 1rem;
}
.lightning-talks a {
  display: inline-block;
  margin-bottom: 2px;
}
.highlight {
  position: relative;
}
.tag {
  position: absolute;
  top: -15px;
  right: -20px;
  padding: 5px 10px;
  border-radius: 20px;
  font-size: 1rem;
  /*background-color: red;*/
  /*border: 1px solid #000;*/
  color: #fff;
  font-weight: bold; 
  box-shadow: 0px 3px 4px rgba(0,0,0,.25);
}

.flex-column {
  display: flex;
  flex-direction: column;
}

.flex-space-between {
  justify-content: space-between;
}

.mb-2 {
  margin-bottom: 1.5rem;
}
.mt-2 {
  margin-bottom: 1.5rem;
}
.board-info {
  max-width: 800px;
  margin: 0 auto;
}
.icon-left {
  float: left;
  width: 47px;
}
.content-right {
  float: right;
  width: calc(100% - 47px);
  padding-left: 10px;
}
/* ... */

